--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,9 @@
   -webkit-text-size-adjust: 100%;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
